[package]
name = "quickdash"
description = "A modern alternative to QuickSFV using Rust."
repository = "https://github.com/AndreVuillemot/QuickDash"
readme = "README.md"
keywords = ["cli", "hash", "verify"]
categories = ["authentication", "filesystem", "command-line-utilities"]
license = "Apache-2.0"
version = "0.6.1"
authors = ["cerda", "b1tzxd", "mjc"]
edition = "2021"

[dependencies]
once_cell = "1.18.0"
tabwriter = "1.2.1"
num_cpus = "1.15.0"
indicatif = { version = "0.16.2", features = ["rayon"] }
rayon = "1.7.0"
walkdir = "2.3.3"
regex = "1.8.4"
clap = { version = "3.2.25", features = ["derive"] }
crc32fast = "1.3.2"
blake2 = "0.10.6"
md-5 = "0.10.5"
blake3 = "1.4.0"
sha-1 = "0.10.1"
sha2 = "0.10.6"
sha3 = "0.10.8"
whirlpool = "0.10.4"
xxhash-rust = { version = "0.8.6", features = ["xxh32", "xxh64", "xxh3"] }

[profile.release]
lto = true
codegen-units = 1
debug = false
# panic = 'abort'

[[bin]]
name = "quickdash"
path = "src/main.rs"
test = false
doc = false

[lib]
name = "quickdash"
path = "src/lib.rs"
